<resources>
    <string name="app_name">Verbes</string>
    <string name="btn_subscribe">Inscription</string>
    <string name="btn_connect">Connexion</string>
    <string name="btn_revision">Mode révision</string>
    <string name="btn_game">Commencer la partie</string>
    <string name="input_firstname">Prénom</string>
    <string name="input_lastname">Nom</string>
    <string name="input_mail">Mail</string>
    <string name="input_level">Niveau</string>
    <string name="input_password">Mot de passe</string>
    <string name="btn_submit_subscription">Je m\'inscris</string>
    <string name="btn_submit_connection">Connexion</string>

    <string name="input_preterit">Prétérit</string>
    <string name="input_participe_passe">Participe passé</string>
    <string name="btn_submit_question">Valider</string>
    <string name="title_activity_revisions">Revisions</string>

    <string name="label_score">...</string>
    <string name="btn_home">Accueil</string>

    <string name="btn_logout">Déconnecter</string>
</resources>
